--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 
 .App-header {
-  background-color: #282c34;
+  background-color: #3B4350;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -21,6 +21,11 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.address{
+  font-size: 15px;
+  margin-bottom: 0;
 }
 
 @keyframes App-logo-spin {
